--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   form_builder_validators: ^10.0.1
   carousel_slider: ^4.2.1
-  flutter_hooks_bloc: ^0.17.0
+  flutter_hooks: 
   flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
