--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter_hooks: 
   flutter_rating_bar: ^4.0.1
+  flutter_bloc: ^8.1.5
 
 dev_dependencies:
   flutter_test:
